# study-materials-generator

./: LICENSE  README.md  manifest.json  materials.json  ocr-llm-studyguide.py  pyproject.toml  requirements.txt  setup.py
src/: chat_session.py  main.py  materials_generator.py  ocr_processor.py  streamlit_logger.py  study_guide_assistant.py
src/chat/: chat_session.py
src/materials/: material_generator.py
src/ocr/: ocr_processor.py
src/study_guides/PolyIndo/: manifest-PolyIndo.json
src/utils/: helpers.py
study_guides/French/: manifest-French.json  materials.json  ocr-French.txt
study_guides/GCP Dataflow/: materials.json
